fix distorted search icons

--- a/chrome/skin/common/awesomeBar.css
+++ b/chrome/skin/common/awesomeBar.css
@@ -45,6 +45,7 @@
 	flex-wrap: wrap;
 }
 
+#urlbar-search-settings .button-icon,
 #theFoxOnlyBetter-urlbar-search-engines button .button-icon {
 	height: 18px;
 	width: 18px;
@@ -61,10 +62,6 @@
 	#urlbar-search-settings {
 		list-style-image: url("chrome://browser/skin/Toolbar@2x.png");
 		-moz-image-region: rect(0, 936px, 36px, 900px);
-	}
-
-	#theFoxOnlyBetter-urlbar-search-engines button .button-icon {
-		height: 36px;
 	}
 }
 
